fix select days, rxjs, days not showing until today

--- a/style.less
+++ b/style.less
@@ -32,8 +32,14 @@ nav {
 }
 
 .day {
+  padding-right: 10px;
+
   textarea {
     width: 100%;
     min-height: 600px;
   }
+}
+
+.facts {
+  padding-left: 10px;
 }
